--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -5,7 +5,8 @@ watchdog==0.8.3
 flake8==2.6.0
 tox==2.3.1
 coverage==4.1
-Sphinx>=1.4.8
+Sphinx==1.6.1
+sphinx-autodoc-typehints==1.2.0
 
 pytest==2.9.2
 pytest-cov
