--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,20 @@
 [tox]
-envlist = py26, py27, py33, py34, py35, flake8
+envlist = py35, py36, flake8
+;envlist = py35, py36
 
 [testenv:flake8]
 basepython=python
 deps=flake8
-commands=flake8 flask_open_directory
+commands=flake8 --max-line-length=80 flask_open_directory
 
 [testenv]
 setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/flask_open_directory
+    OPEN_DIRECTORY_SERVER=michael.local
 deps =
-    -r{toxinidir}/requirements_dev.txt
+    pytest
 commands =
     pip install -U pip
     py.test --basetemp={envtmpdir}
-
 
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following lines:
